hphp/hack/test/typecheck/like_types/pessimization/fun_explicit_targs.php.exp
File "fun_explicit_targs.php", line 10, characters 3-3:
Some type constraint(s) here are violated (Typing[4323])
File "fun_explicit_targs.php", line 4, characters 12-12:
'T' is a constrained type parameter
File "fun_explicit_targs.php", line 4, characters 17-19:
Some type constraint(s) are violated here
File "fun_explicit_targs.php", line 4, characters 12-12:
T is a constrained type parameter
File "fun_explicit_targs.php", line 4, characters 17-19:
Expected ~int
File "fun_explicit_targs.php", line 10, characters 5-10:
But got string
